--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="intro">
                 <h1 class="intro_main">INTRODUCING</h1>
-                <h2 class="intro_next">Our Members</h2d>
+                <h2 class="intro_next">Our Members</h2>
             </div>
             <div class="row">
                 <div class="form_1">
